--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,8 +15,7 @@ jobs:
 
     # Install dependencies (modify as needed)
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y \
-        build-essential cmake libeigen3-dev libopencv-dev libyaml-cpp-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential cmake libeigen3-dev python3-opencv libyaml-cpp-dev 
 
     - name: Configure CMake
       run: cmake -S . -B build
