Change CI trigger branches to 'action_dev'
Updated CI workflow to trigger on 'action_dev' branch.

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "action_dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "action_dev" ]
 
 jobs:
   build:
