--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,26 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # Install dependencies (modify as needed)
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential cmake libeigen3-dev python3-opencv libyaml-cpp-dev 
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          build-essential \
+          cmake \
+          libeigen3-dev \
+          libopencv-dev \
+          libyaml-cpp-dev \
+          git
+
+    - name: Clone and build lgmath
+      run: |
+        mkdir -p ~/workspace/lgmath
+        cd ~/workspace/lgmath
+        git clone https://github.com/utiasASRL/lgmath.git .
+        mkdir -p build && cd build
+        cmake ..
+        cmake --build . --parallel
+        sudo cmake --install .
 
     - name: Configure CMake
       run: cmake -S . -B build
