--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Build and test
 
 on:
   push:
@@ -22,7 +22,15 @@ jobs:
           libeigen3-dev \
           libopencv-dev \
           libyaml-cpp-dev \
-          git
+          git \
+          libgtest-dev
+
+    - name: Install GoogleTest
+      run: |
+        cd /usr/src/googletest/googletest
+        sudo cmake .
+        sudo make
+        sudo cp lib/*.a /usr/lib/
 
     - name: Clone and build lgmath
       run: |
