--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(generate_doppler_velocity_csv generate_doppler_velocity_csv.cpp)
 
 target_link_libraries(encode_chirps_in_radar_data
     PRIVATE
-        spinning_radar_doppler
+        srd::core
         ${OpenCV_LIBS}
         srd::core
         yaml-cpp
@@ -11,7 +11,7 @@ target_link_libraries(encode_chirps_in_radar_data
 
 target_link_libraries(generate_doppler_velocity_csv
     PRIVATE
-        spinning_radar_doppler
+        srd::core
         ${OpenCV_LIBS}
         srd::core
         yaml-cpp
