--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(test_radar test_radar.cpp)
 # ---- Link to main library + GTest ----
 target_link_libraries(test_radar
     PRIVATE
-        spinning_radar_doppler
+        srd::core
         GTest::GTest
         GTest::Main
 )
