--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -33,7 +33,7 @@ jobs:
         sudo cp lib/*.a /usr/lib/
 
     - name: Configure CMake
-      run: cmake -S . -B build -DSRD_BUILD_TESTS=ON
+      run: cmake -S . -B build -DSRD_BUILD_TESTS=ON -DSRD_BUILD_APPS=ON
 
     - name: Build
       run: cmake --build build --parallel
