--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(encode_chirps_in_radar_data encode_chirps_in_radar_data.cpp)
 add_executable(generate_doppler_velocity_csv generate_doppler_velocity_csv.cpp)
+add_executable(generate_ego_velocity_csv generate_ego_velocity_csv.cpp)
 
 target_link_libraries(encode_chirps_in_radar_data
     PRIVATE
@@ -10,6 +11,14 @@ target_link_libraries(encode_chirps_in_radar_data
 )
 
 target_link_libraries(generate_doppler_velocity_csv
+    PRIVATE
+        srd::core
+        ${OpenCV_LIBS}
+        srd::core
+        yaml-cpp
+)
+
+target_link_libraries(generate_ego_velocity_csv
     PRIVATE
         srd::core
         ${OpenCV_LIBS}
